5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_2443.log
== TEST (2019-04-16 07:55:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = 1
print(x)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:59:50) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opção desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3
print(Ve)


-- OUTPUT:
179.5943800302165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:00:38) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3
print(Ve)


-- OUTPUT:
179.5943800302165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:08:12) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3
print(round(Ve, 2))

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

ar = Ve - Vc
gas = Ve - ar

print(round(ar, 2))
print(round(gas, 2))


-- OUTPUT:
179.59
170.57
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:08:22) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3
print(round(Ve, 2))

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

ar = Ve - Vc
gas = Ve - ar

print(round(ar, 2))
print(round(gas, 2))


-- OUTPUT:
179.59
170.57
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:03) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3
print(round(Ve, 2))

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

ar = Ve - Vc
gas = Ve - ar

if(w == 1):
	print(round(ar, 2))

else:
	print(round(gas, 2))


-- OUTPUT:
179.59
170.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:02) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

ar = Ve - Vc
gas = Ve - ar

if(w == 1):
	print(round(ar, 4))

else:
	print(round(gas, 4))


-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:32) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque:"))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(ar, 4))

else:
	print(round(gas, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(ar, 4))
NameError: name 'ar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:49) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(ar, 4))

else:
	print(round(gas, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(ar, 4))
NameError: name 'ar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:13:06) 
-- CODE:
from math import *
# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(ar, 4))

else:
	print(round(gas, 4))


-- EXECUTION TIME:
0.201565
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 17, in <module>
    print(round(ar, 4))
NameError: name 'ar' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:23) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(ar, 4))

if(w == 2):
	print(round(gas, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(ar, 4))
NameError: name 'ar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:42) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(ar, 4))

if(w == 2):
	print(round(gas, 4))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(ar, 4))
NameError: name 'ar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:07) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(Ve, 4))

if(w == 2):
	print(round(gas, 4))


-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:15:27) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vc = (a * b)/3

gas = Ve - Vc

if(w == 1):
	print(round(Ve, 4))

if(w == 2):
	print(round(gas, 4))


-- EXECUTION TIME:
0.211566
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:21) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vce = (a * b)/3

gas = Ve - Vce
ar = Vce

if(w == 1):
	print(round(ar, 4))

if(w == 2):
	print(round(gas, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:47) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vce = (a * b)/3

gas = Ve - Vce
ar = Vce

if(w == 1):
	print(round(ar, 4))

if(w == 2):
	print(round(gas, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:20:08) 
-- CODE:
from math import *

# Leitura dos dados
r = float(input("raio do tanque: "))
x = float(input("altura da coluna de ar: "))
w = int(input("digite a opcao desejada: "))

#Calculo dos volumes
Ve = (4 * pi * r**3)/3

a = pi * x**2
b = (3*r) - x
Vce = (a * b)/3

gas = Ve - Vce
ar = Vce

if(w == 1):
	print(round(ar, 4))

if(w == 2):
	print(round(gas, 4))


-- EXECUTION TIME:
0.209584
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
